--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,10 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon app.js"
+    "dev": "nodemon app.js",
+    "prod": "node app.js",
+    "dev-local": "nodemon app.js --local=true",
+    "prod-local": "node app.js --local=true"
   },
   "author": "Mr. Ryto",
   "license": "ISC",
@@ -21,8 +24,10 @@
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
     "http-errors": "^2.0.0",
+    "minimist": "^1.2.8",
     "mongoose": "^8.4.4",
     "mongoose-date-format": "^1.2.0",
+    "to-boolean": "^1.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
