--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "concurrently \"cd frontend && npm run serve\" \"cd backend && npm run dev\""
+    "dev": "concurrently \"cd frontend && npm run serve\" \"cd backend && npm run dev\"",
+    "dev-local": "concurrently \"cd frontend && npm run serve\" \"cd backend && npm run dev-local\""
   },
   "author": "Mr. Ryto",
   "license": "ISC",
